Add GetMyProfile method
