# design/design.go
@@ -28,6 +28,17 @@ var _ = Resource("userProfile", func() {
 		Response(InternalServerError, ErrorMedia)
 	})
 
+	Action("GetMyProfile", func() {
+		Description("Get a UserProfile by UserID")
+		Routing(GET("/profile"))
+        Params(func() {
+            Param("userId", String, "User ID")
+            Required("userId")
+        })		
+		Response(OK)
+		Response(NotFound, ErrorMedia)
+		Response(InternalServerError, ErrorMedia)
+	})
 })
 
 // UserProfileMedia is the default media type for user-profile service
@@ -49,7 +60,6 @@ var UserProfileMedia = MediaType("application/jormungandr.user-profile+json", fu
 		Attribute("email")
 		Attribute("createdOn")
 	})
-
 })
 
 // UserProfilePayload is the payload specification
