# swagger/swagger.yaml
@@ -142,6 +142,38 @@ paths:
       summary: GetUserProfile userProfile
       tags:
       - userProfile
+  /user-profile/profile:
+    get:
+      description: Get a UserProfile by UserID
+      operationId: userProfile#GetMyProfile
+      parameters:
+      - description: User ID
+        in: query
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/vnd.goa.error
+      - application/vnd.goa.error
+      - application/jormungandr.user-profile+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/userProfile'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: GetMyProfile userProfile
+      tags:
+      - userProfile
 produces:
 - application/json
 - application/xml
